# SquareOne

./: CMakeLists.txt  README.md  TT.h  attacks.cpp  attacks.h  bitboards.cpp  bitboards.h  evaluation.h  main.cpp  move.h  movegen.h  play.h  search.h  test.cpp  test.h  types.h
